fixed layout issue

--- a/src/pages/pricing.css
+++ b/src/pages/pricing.css
@@ -35,6 +35,9 @@
 @media (min-width: 1280px) {
   .planContainer {
     padding: 120px 165px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .planBoxOuterContainer {
